# DreamSploit

./: .replit  LoadSequence.py  README.md  allowed-linux.json  dream-net.py  dream-net3.py  modules.template.json  modules3.json  pyproject.toml
modules/: mail-bomb3.py  mail-bomb3.py.bak  port-scanner3.py  port-scanner3.py.bak  template.py
