[tool.poetry]
name = "dreamsploit-1"
version = "0.1.0"
description = ""
authors = ["Julius Nieves <julius.nieves@sascholar.org>"]

[tool.poetry.dependencies]
python = "^3.7"
termcolor = "^1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
